# GAIA

./: .env.example  .gitignore  .gitmodules  AGENT_FEEDBACK.md  CLAUDE.md  CLEANUP-SUMMARY.md  Dockerfile  Dockerfile.simple  GAIA-VS-GAIA-DIRECT.md  KNOWLEDGE-DEDUPLICATION-IMPLEMENTATION.md  LOCAL-ACCESS.md  PLUGIN-KNOWLEDGE-CHANGES.md  README.md  REGISTRY_ASSISTANT_TEST_STRATEGY.md  REGISTRY_DISCOVER_ACTION_IMPLEMENTATION_SUMMARY.md  REGISTRY_UX_IMPROVEMENTS_NEEDED.md  SECURITY.md  SERVER_DEPLOYMENT_NOTES.md  SETUP-GUIDE.md  TEST-SETUP.md  build-utils.ts  cookies.txt  deploy.sh  dev.sh  direct-llm-proxy.js  docker-compose-ssl.yaml  docker-compose.dev.yml  docker-compose.local.yaml  docker-compose.monitoring.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.production.yaml  docker-compose.regenai.yaml  docker-compose.yaml  docker-push.sh  form-extraction-server.js  grant-submission-api.js  init-ssl.sh  koi-api-proxy.js  koi-proxy.js  (+48 more)
.claude/: README.md  (+2 more)
django_admin/: .env.example  Dockerfile  README.md  db.sqlite3  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
django_admin/eliza_admin/: __init__.py  auth_views.py  settings.py  urls.py  wsgi.py
django_admin/eliza_tables/: __init__.py  admin.py  apps.py  models.py  routers.py  urls.py  views.py
django_admin/elizaos/: admin.py  admin_security.py  apps.py  models.py
django_admin/knowledge/: admin.py  models.py  urls.py  views.py
django_admin/knowledge_backup/: admin.py  models.py
django_admin/koi_graph/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
(+788 files in other folders)
