[tool.poetry]
name = "eliza-django-admin"
version = "0.1.0"
description = "Django admin interface for ElizaOS database"
authors = ["RegenAI Project"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.0"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88